--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ header {
 .cart {
     position: fixed;
     top: 0;
-    right: 0;
+    right: -100%;
     width: 360px;
     min-height: 100vh;
     padding: 20px;
@@ -138,7 +138,7 @@ header {
 .buy-btn:hover {
     background: var(--text-color);
 }
-.close-cart {
+#close-cart {
     position: absolute;
     top: 1rem;
     right: 0.8rem;
@@ -200,4 +200,43 @@ header {
 }
 .add-cart:hover{
     background: hsl(249, 32%, 17%);
+}
+
+@media (max-width: 1080px) {
+    .nav {
+        padding: 15px;
     }
+    section {
+        padding: 3rem 0 2rem;
+    }
+    .container
+    {
+        margin: 0 auto;
+        width: 90%;
+    }
+    .shop {
+        margin-top: 2rem !important;
+    }
+}
+
+@media (max-width: 400px) {
+    .nav{
+        padding: 11px;
+    }
+    .logo {
+        font-size: 1rem;
+    }
+    .cart {
+        width: 320px;
+    }
+}
+
+@media (max-width: 400px) {
+
+    .shop {
+        margin-top: 1rem !important;
+    }
+    .cart {
+        width: 280px;
+    }
+}
